adição de navegação entre telas

--- a/tela2.html
+++ b/tela2.html
@@ -6,7 +6,7 @@
   <title>Linhas de Ônibus</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="custom-body">
   <div class="main-container">
@@ -32,5 +32,6 @@
       <button class="button" type="button" onclick="limparFiltros()">Limpar Filtros</button>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
