--- a/tela_inicial.html
+++ b/tela_inicial.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>RotaCertaMA</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/landingPage.css" />
 </head>
 <body>
   <div class="container">
@@ -35,8 +35,8 @@
         </div>
 
         <div class="botoes-info">
-          <button>Acesso as linhas de ônibus</button>
-          <button>Acesso as frotas de ônibus</button>
+          <button data-target="tela2.html">Acesso as linhas de ônibus</button>
+          <button data-target="tela3.html">Acesso as notícias de trânsito</button>
           <button>Acesso aos pontos de ônibus</button>
         </div>
 
@@ -53,5 +53,6 @@
       </section>
     </main>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
