implementação da lógica de busca na tela de linhas

--- a/tela2.html
+++ b/tela2.html
@@ -25,9 +25,9 @@
       </div>
     </div>
     <div class="right-panel">
-      <input id="campoBusca" class="input" type="text" placeholder="Buscar linha" />
-      <input id="campoRegiao" class="input" type="text" placeholder="Região" />
-      <input id="campoTerminal" class="input" type="text" placeholder="Terminais" />
+      <input id="filtro-linha" class="input" type="text" placeholder="Buscar linha" />
+      <input id="filtro-regiao" class="input" type="text" placeholder="Região" />
+      <input id="filtro-terminal" class="input" type="text" placeholder="Terminais" />
       <button class="button" type="button" onclick="buscarLinhas()">Buscar</button>
       <button class="button" type="button" onclick="limparFiltros()">Limpar Filtros</button>
     </div>
